Archive2/11/40536d9477d20d/output
main.cpp:51:7: error: no member named 'flibble' in 'Wrapper<std::basic_string<char> &>'
    y.flibble();
    ~ ^
1 error generated.
